--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ gunicorn==20.0.4
 sqlparse==0.4.1
 whitenoise==5.2.0
 django-heroku
-psycopg2==2.7.3
-dj-database-url==0.4.2
+psycopg2==2.9.3
+dj-database-url
 pytz==2017.3
