--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==3.1.2
 gunicorn==20.0.4
 sqlparse==0.4.1
 whitenoise==5.2.0
-django-heroku
+django-heroku==0.3.1
 psycopg2==2.7.3
-dj-database-url==0.4.2
+dj-database-url==0.5.0
 pytz==2017.3
