--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ gunicorn==20.0.4
 sqlparse==0.4.1
 whitenoise==5.2.0
 django-heroku==0.3.1
-psycopg2==2.7.5
+psycopg2-binary==2.9.3
 dj-database-url==0.5.0
 pytz==2017.3
